add user bind/unbind device token api
