# common/swagger/lemurs.yml
@@ -80,6 +80,24 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/RefreshTokenResponse'
+  /api/v1/setDeviceToken:
+    post:
+      tags:
+        - Login
+      summary: set device token
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/DeviceTokenRequest'
+      responses:
+        '200':
+          description: response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DummyResponse'
   /api/v1/userInfo:
     get:
       tags:
@@ -1764,6 +1782,16 @@ components:
           type: string
       required:
         - refreshToken
+    DeviceTokenRequest:
+      type: object
+      properties:
+        isBind:
+          type: boolean
+        deviceToken:
+          type: string
+      required:
+        - isBind
+        - deviceToken
     LoginResponse:
       allOf:
         - $ref: '#/components/schemas/CommonResponse'
