# coua/src/main/java/com/keepreal/madagascar/coua/model/UserDeviceInfo.java
@@ -1,0 +1,40 @@
+package com.keepreal.madagascar.coua.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.springframework.data.annotation.CreatedDate;
+import org.springframework.data.annotation.LastModifiedDate;
+import org.springframework.data.jpa.domain.support.AuditingEntityListener;
+
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.EntityListeners;
+import javax.persistence.Id;
+import javax.persistence.Table;
+
+@Data
+@Table(name = "user_device")
+@Entity
+@EntityListeners(AuditingEntityListener.class)
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class UserDeviceInfo {
+
+    @Id
+    private String id;
+    private String userId;
+    private String deviceToken;
+    @Column(name = "is_binded")
+    @Builder.Default
+    private Boolean binded = false;
+    @Column(name = "is_deleted")
+    @Builder.Default
+    private Boolean deleted = false;
+    @CreatedDate
+    private Long createdTime;
+    @LastModifiedDate
+    private Long updatedTime;
+}
